<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyParty (Admin)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="connexion">Connexion</string>
    <string name="register">Register</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="birth">Birth</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="concerts">Concerts</string>
    <string name="scan">Scan</string>
    <string name="client">Clients</string>
    <string name="all_concerts">All</string>
    <string name="next_concerts">Next</string>
    <string name="details">Details</string>
    <string name="news">News</string>
    <string name="reservations">Reservations</string>
    <string name="tickets">Tickets</string>
    <string name="map">Map</string>
    
    <string name="unknown_user">Invalid username or password</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="update">Update</string>
     <string name="scanpush">ScanPush</string>
    <string name="update_all">Update all</string>
    <string name="stats">Stats</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_deconect">Deconnexion</string>
    <string name="api_key">AIzaSyCoaJos2V3NSJg0-d_QE-8xIuV_2QEiaS4</string>
    
    <integer name="google_play_services_version">4242000</integer>
    
    <color name="red">#FF0000</color>
    <color name="blue">#1E7FCB</color>
    <color name="trueblue">#0000FF</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="bis">#766F64</color>
    <color name="apptheme_color">#33b5e5</color>
    <color name="selected_color">#0098CB</color> <!-- blue  -->

</resources>
