<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    tools:context=".RegisterActivity" >
	
	<ScrollView
	    android:id="@+id/scrollRegister"
		android:layout_width="match_parent"
		android:layout_above="@id/buttonRegister"
		android:layout_height="wrap_content"
		android:background="@color/black"
		android:orientation="vertical">

    
		<GridLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:useDefaultMargins="false"
			android:alignmentMode="alignBounds"
			android:columnCount="2"
			android:rowCount="9">
		 		
			<TextView
				android:id="@+id/firstnameTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"
				android:layout_marginTop="20dp"
				android:layout_marginRight="20dp"
		        android:layout_column="0"
			    style="@style/AppBaseTheme"
		        android:layout_row="0"
				android:gravity="left"
				android:text="@string/firstname"
				android:textSize="@dimen/itemDimension" />
			
			<EditText
			    android:id="@+id/firstnameTextEdit"
			    android:layout_height="wrap_content"
			    android:layout_column="1"
			    style="@style/AppBaseTheme"
			    android:layout_gravity="fill_horizontal"
			    android:layout_row="0"
			    android:hint=""
			    android:textColor="@color/white"
			    android:textSize="@dimen/itemDimension" />
			
			<TextView
		        android:id="@+id/lastnameTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:textColor="@color/white"
		        android:layout_column="0"
			    style="@style/AppBaseTheme"
		        android:layout_row="1"
		        android:text="@string/lastname"
		        android:textSize="@dimen/itemDimension" />
			
			<EditText
		        android:id="@+id/lastnameTextEdit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
				android:textColor="@color/white"
		        android:layout_column="1"
			    style="@style/AppBaseTheme"
		        android:layout_row="1"
		        android:hint=""
		        android:textSize="@dimen/itemDimension" />
			
			<TextView
		        android:id="@+id/birthTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:textColor="@color/white"
	            android:layout_column="0"
			    style="@style/AppBaseTheme"
	            android:layout_row="2"
		        android:layout_marginTop="10dp"
		        android:text="@string/birth"
		        android:textSize="@dimen/itemDimension" />
			
			<EditText
			    android:id="@+id/birthTextEdit"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:textColor="@color/white"
			    android:layout_column="1"
			    android:layout_gravity="center"
		        android:layout_row="2"
			    style="@style/AppBaseTheme"
			    android:ems="10"
			    android:inputType="date"
			    android:textSize="@dimen/itemDimension" />
			    
			<TextView
		        android:id="@+id/emailTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:textColor="@color/white"
		        android:layout_column="0"
			    style="@style/AppBaseTheme"
		        android:layout_row="3"
		        android:text="@string/email"
		        android:textSize="@dimen/itemDimension" />
			
			<EditText
			    android:id="@+id/mailTextEdit"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
				android:textColor="@color/white"
		        android:layout_column="1"
			    style="@style/AppBaseTheme"
		        android:layout_row="3"
			    android:ems="10"
			    android:inputType="textEmailAddress" />
			
			<TextView
		        android:id="@+id/addressTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:textColor="@color/white"
		        android:layout_column="0"
			    style="@style/AppBaseTheme"
		        android:layout_row="4"
		        android:text="@string/address"
		        android:textSize="@dimen/itemDimension" />
			
			<EditText
			    android:id="@+id/addressTextEdit"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
				android:textColor="@color/white"
		        android:layout_column="1"
			    style="@style/AppBaseTheme"
		        android:layout_row="4"
			    android:ems="10"
			    android:inputType="textPostalAddress" />
			
			<TextView
		        android:id="@+id/loginTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:textColor="@color/white"
		        android:layout_column="0"
			    style="@style/AppBaseTheme"
		        android:layout_row="5"
		        android:text="@string/login"
		        android:textSize="@dimen/itemDimension" />
			
			<EditText
		        android:id="@+id/loginTextEdit"
		        android:layout_width="match_parent"
				android:textColor="@color/white"
		        android:layout_column="1"
			    style="@style/AppBaseTheme"
		        android:layout_row="5"
		        android:hint=""
		        android:textSize="@dimen/itemDimension" />
			
			<TextView
		        android:id="@+id/pwd1TextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:textColor="@color/white"
	            android:layout_column="0"
			    style="@style/AppBaseTheme"
	            android:layout_row="6"
		        android:text="@string/password"
		        android:textSize="@dimen/itemDimension" />
			
			<EditText
			    android:id="@+id/pwd1TextEdit"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
				android:textColor="@color/white"
	            android:layout_column="1"
			    style="@style/AppBaseTheme"
		        android:layout_row="6"
			    android:ems="10"
			    android:inputType="textPassword" />
			
			<TextView
		        android:id="@+id/pwd2TextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:textColor="@color/white"
			    style="@style/AppBaseTheme"
		        android:layout_column="0"
		        android:layout_row="7"
		        android:text="@string/retype_password"
		        android:textSize="@dimen/itemDimension" />
			
			<EditText
			    android:id="@+id/pwd2TextEdit"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    style="@style/AppBaseTheme"
				android:textColor="@color/white"
				android:layout_column="1"
				android:layout_row="7"
			    android:ems="10"
			    android:inputType="textPassword" />
		</GridLayout>
		
	</ScrollView>

	<Button
	    android:id="@+id/buttonRegister"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/scrollRegister"
	    android:background="@color/blue"
	    android:text="@string/register"
	    android:textSize="@dimen/titleDimension" />

	
</RelativeLayout>
		
	